# ghmcp

./: README.md  SETUP.md  mcp-config.json  pyproject.toml  start_mcp_server.sh  stop_mcp_server.sh
ghmcp/: main.py  server.py  utility.py
scripts/: poetry_update.sh  poetry_venv.sh  start_ghmcp_stdio.sh
tests/: test_main.py  test_server.py  test_utility.py
